# simple_instruments

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/: SimpleInstrumentsConfig.cmake
include/: simple_instruments.h  simple_telemetry.h
include/simple_telemetry/: telemetry.h
src/simple_telemetry/: telemetry.cpp
tests/: CMakeLists.txt  doctest.h  simple_instruments_tests.cpp  telemetry_tests.cpp
